--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "pluralize": "^8.0.0",
+    "stripe": "^18.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
