--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.848.0",
     "@clerk/express": "^1.7.10",
+    "@types/multer": "^2.0.0",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "pluralize": "^8.0.0",
     "stripe": "^18.3.0",
     "uuid": "^11.1.0"
